add quotes and remove []
Signed-off-by: Greg Fitzgerald <netzdamon@gmail.com>

--- a/lib/athenry/templates/bashconfig.erb
+++ b/lib/athenry/templates/bashconfig.erb
@@ -1,4 +1,4 @@
 #!/bin/bash
 
-OVERLAYS=[<%= CONFIG.overlays %>]
-PKG_MANGER=<%= CONFIG.pkgmanager %>
+OVERLAYS="<%= CONFIG.overlays %>"
+PKG_MANAGER="<%= CONFIG.pkgmanager %>"
