Added timezone OVERLAYS should be an array Signed-off-by: Greg Fitzgerald <netzdamon@gmail.com>

--- a/lib/athenry/templates/bashconfig.erb
+++ b/lib/athenry/templates/bashconfig.erb
@@ -1,4 +1,6 @@
 #!/bin/bash
 
-OVERLAYS="<%= CONFIG.overlays %>"
+TIMEZONE="<%= CONFIG.timezone %>"
+OVERLAYS=( <%= CONFIG.overlays %> )
+SETS=( <%= CONFIG.sets %> )
 PKG_MANAGER="<%= CONFIG.pkgmanager %>"
