Use new overlays config format
Signed-off-by: Greg Fitzgerald <netzdamon@gmail.com>

--- a/lib/athenry/templates/bashconfig.erb
+++ b/lib/athenry/templates/bashconfig.erb
@@ -1,4 +1,9 @@
 TIMEZONE="<%= CONFIG.timezone %>"
-OVERLAYS=( <%= CONFIG.overlays %> )
 SETS=( <%= CONFIG.sets %> )
 PKG_MANAGER="<%= CONFIG.pkgmanager %>"
+ARCH="<%= CONFIG.arch %>"
+
+# Overlays Hash
+<% CONFIG.overlay_array.each do |name| %>
+<%= "#{name}" %>
+<% end %>
