Created set_temp_options method. This allows for temporary variables to be set in config.sh for the duration of a block. Signed-off-by: Greg Fitzgerald <netzdamon@gmail.com>

--- a/lib/athenry/templates/bashconfig.erb
+++ b/lib/athenry/templates/bashconfig.erb
@@ -1,3 +1,7 @@
+# Do not edit by hand, this file changes during runtime.
+# Make changes to config.rb
+#
+
 TIMEZONE="<%= CONFIG.timezone %>"
 SETS=( <%= CONFIG.sets %> )
 PKG_MANAGER="<%= CONFIG.pkgmanager %>"
@@ -7,3 +11,8 @@ ARCH="<%= CONFIG.arch %>"
 <% CONFIG.overlay_array.each do |name| %>
 <%= "#{name}" %>
 <% end %>
+
+# Temporary options
+# These change depending on what your building do not edit!
+FRESHEN="<%= CONFIG.freshen %>"
+NOPALUDIS="<%= CONFIG.nopaludis %>"
