--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,4 +2,4 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <link rel="stylesheet" type="text/css" href="http://gregf.github.com/athenry/css/screen.css" media="screen" />
 <link rel="stylesheet" type="text/css" href="http://gregf.github.com/athenry/css/syntax.css" media="screen" />
-<link rel="alternate" type="application/atom+xml" href="{{ page.url }}/feeds/atom.xml" title="Atom Feed" />
+<link rel="alternate" type="application/atom+xml" href="http://gregf.github.com/athenry/feeds/atom.xml" title="Atom Feed" />
