--- a/_includes/toplinks.html
+++ b/_includes/toplinks.html
@@ -1,6 +1,6 @@
 <a href="http://gregf.github.com/athenry/" />
-    <img src="/images/athenry_logo4.png" alt="Athenry Logo" class="left"/>
+    <img src="http://gregf.github.com/athenry/images/athenry_logo4.png" alt="Athenry Logo" class="left"/>
 <a href="http://github.com/gregf/athenry/zipball/master" />
-    <img src="/images/zip.png" class="right"/>
+    <img src="http://gregf.github.com/athenry/images/zip.png" class="right"/>
 <a href="http://github.com/gregf/athenry/tarball/master" />
-    <img src="/images/tar.png" class="right" />
+    <img src="http://gregf.github.com/athenry/images/tar.png" class="right" />
