Change download link
Signed-off-by: Greg Fitzgerald <netzdamon@gmail.com>

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,6 +1,6 @@
 <ul class="navbar">
   <li><a href="http://gregf.github.com/athenry/" class="nav">Home</a></li>
-  <li><a href="#" class="nav">About</a></li>
+  <li><a href="#download" class="nav">About</a></li>
   <li><a href="http://gregf.github.com/athenry/docs/" class="nav">Docs</a></li>
   <li><a href="http://github.com/gregf/athenry/" class="nav">Download</a></li>
 </ul>
