add some alt tags
Signed-off-by: Greg Fitzgerald <netzdamon@gmail.com>

--- a/_includes/toplinks.html
+++ b/_includes/toplinks.html
@@ -1,6 +1,6 @@
-<a href="http://gregf.github.com/athenry/" />
-    <img src="http://gregf.github.com/athenry/images/athenry_logo4.png" alt="Athenry Logo" class="left"/>
-<a href="http://github.com/gregf/athenry/zipball/master" />
-    <img src="http://gregf.github.com/athenry/images/zip.png" class="right"/>
-<a href="http://github.com/gregf/athenry/tarball/master" />
-    <img src="http://gregf.github.com/athenry/images/tar.png" class="right" />
+<a href="http://gregf.github.com/athenry/" >
+    <img src="http://gregf.github.com/athenry/images/athenry_logo4.png" alt="Athenry Logo" class="left"/></a>
+<a href="http://github.com/gregf/athenry/zipball/master" >
+    <img src="http://gregf.github.com/athenry/images/zip.png" class="right"i alt="zip" /></a>
+<a href="http://github.com/gregf/athenry/tarball/master" >
+    <img src="http://gregf.github.com/athenry/images/tar.png" class="right" alt="tar" /></a>
