--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,3 @@
 <p>
-    <a href="http://validator.w3.org/check?uri=referer">Valid XHTML 1.0</a> | Copyright &copy; Greg Fitzgerald 
+Athenry © 2009 by <a href="mailto:netzdamon@gmail.com">Greg Fitzgerald</a>. Licensed under the MIT license. 
 </p>
