--- a/css/screen.css
+++ b/css/screen.css
@@ -255,7 +255,7 @@
 /**************** code styles ****************/
     pre {
         font-size: 12px;
-        padding: 0;
+        padding 0;
         margin-top 5px;
         margin-bottom 5px;
         background: #f0f0f0;
