--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -2,5 +2,5 @@
   <li><a href="http://gregf.github.com/athenry/" class="nav">Home</a></li>
   <li><a href="http://gregf.github.com/athenry/about/" class="nav">About</a></li>
   <li><a href="http://gregf.github.com/athenry/docs/" class="nav">Docs</a></li>
-  <li><a href="#download" class="nav">Download</a></li>
+  <li><a href="http://gregf.github.com/athenry/download/" class="nav">Download</a></li>
 </ul>
