use site.url where it makes sense
Signed-off-by: Greg Fitzgerald <netzdamon@gmail.com>

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,6 +1,6 @@
 <ul class="navbar">
-  <li><a href="http://gregf.github.com/athenry/" class="nav">Home</a></li>
-  <li><a href="http://gregf.github.com/athenry/about/" class="nav">About</a></li>
-  <li><a href="http://gregf.github.com/athenry/docs/" class="nav">Docs</a></li>
-  <li><a href="http://gregf.github.com/athenry/download/" class="nav">Download</a></li>
+  <li><a href="{{ site.url }}" class="nav">Home</a></li>
+  <li><a href="{{ site.url }}/about/" class="nav">About</a></li>
+  <li><a href="{{ site.url }}/docs/" class="nav">Docs</a></li>
+  <li><a href="{{ site.url }}/download/" class="nav">Download</a></li>
 </ul>
