--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,5 +1,5 @@
 <title>{{ site.title }} :: {{ page.title }}</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<link rel="stylesheet" type="text/css" href="http://gregf.github.com/athenry/css/screen.css" media="screen" />
-<link rel="stylesheet" type="text/css" href="http://gregf.github.com/athenry/css/syntax.css" media="screen" />
-<link rel="alternate" type="application/atom+xml" href="http://gregf.github.com/athenry/feeds/atom.xml" title="Atom Feed" />
+<link rel="stylesheet" type="text/css" href="{{ site.url }}/css/screen.css" media="screen" />
+<link rel="stylesheet" type="text/css" href="{{ site.url }}/css/syntax.css" media="screen" />
+<link rel="alternate" type="application/atom+xml" href="{{ site.url }}/feeds/atom.xml" title="Atom Feed" />
