implemented readline based shell with history and tabcompletion
Signed-off-by: Greg Fitzgerald <netzdamon@gmail.com>

--- a/lib/athenry/templates/help.erb
+++ b/lib/athenry/templates/help.erb
@@ -5,31 +5,31 @@ Athenry Shell Help:
 
 Setup:
 ---------------
-<% setup.each do |cmd| %>
+<% @setup.each do |cmd| %>
 * <%= cmd %>
 <% end %>
 
 
 Build:
 ---------------
-<% build.each do |cmd| %>
+<% @build.each do |cmd| %>
 * <%= cmd %>
 <% end %>
 
 Target:
 ---------------
-<% target.each do |cmd| %>
+<% @target.each do |cmd| %>
 * <%= cmd %>
 <% end %>
 
 Freshen:
 ---------------
-<% freshen.each do |cmd| %>
+<% @freshen.each do |cmd| %>
 * <%= cmd %>
 <% end %>
 
 Clean:
 ---------------
-<% clean.each do |cmd| %>
+<% @clean.each do |cmd| %>
 * <%= cmd %>
 <% end %>
