--- a/lib/athenry/templates/help.erb
+++ b/lib/athenry/templates/help.erb
@@ -1,7 +1,7 @@
 Welcome to Athenry  <%= "#{Athenry::Version::STRING}" %>!  This is the help utility.
 
 If this is your first time using the Athenry shell you should check out
-the Quickstart guide at http://gregf.github.com/docs/quickstart/
+the Quickstart guide at http://gregf.github.com/athenry/docs/quickstart/
 
 Enter the name of the command you want to run and the shell will run it.
 
