--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,3 @@
 <p>
-Athenry &copy 2009 by <a href="mailto:netzdamon@gmail.com">Greg Fitzgerald</a>. Licensed under the MIT license. 
+Athenry &copy 2009-2010 by <a href="mailto:netzdamon@gmail.com">Greg Fitzgerald</a>. Licensed under the MIT license. 
 </p>
