--- a/meta/documentation/css/style.css
+++ b/meta/documentation/css/style.css
@@ -3,6 +3,7 @@ body {
   font-family: "Lucida Sans", "Lucida Grande", Verdana, Arial, sans-serif; 
   font-size: 13px;
 }
+body.frames { padding: 0 5px; }
 h1 { font-size: 25px; margin: 1em 0 0.5em; padding-top: 4px; border-top: 1px dotted #d5d5d5; }
 h1.noborder { border-top: 0px; margin-top: 0; padding-top: 4px; }
 h1.title { margin-bottom: 10px; }
@@ -26,9 +27,11 @@ h2 {
   background: #e3e4e3; border: 1px solid #d5d5d5; padding: 7px 10px;
 }
 .note.todo { background: #ffffc5; border-color: #ececaa; }
+.note.returns_void { background: #efefef; }
 .note.deprecated { background: #ffe5e5; border-color: #e9dada; }
 .note.title { text-transform: lowercase; padding: 1px 5px; margin-left: 5px; font-size: 0.9em; font-family: "Lucida Sans", "Lucida Grande", Verdana, Arial, sans-serif; }
 h1 .note.title { font-size: 0.5em; font-weight: normal; padding: 3px 5px; position: relative; top: -3px; text-transform: capitalize; }
+.note.title.constructor { color: #fff; background: #6a98d6; border-color: #6689d6; } 
 .note.title.writeonly { color: #fff; background: #45a638; border-color: #2da31d; } 
 .note.title.readonly { color: #fff; background: #6a98d6; border-color: #6689d6; } 
 .note.title.private { background: #d5d5d5; border-color: #c5c5c5; }
@@ -111,7 +114,7 @@ p.signature .aliases .names { font-family: Monaco, Consolas, Courier, monospace;
 .tags ul { margin-top: 5px; padding-left: 30px; list-style: square; }
 .tags ul li { margin-bottom: 3px; }
 .tags ul .name { font-family: monospace; font-weight: bold; }
-.tags ul p { display: inline; margin-bottom: 5px; }
+.tags ul p.note { padding: 3px 6px; }
 .tags { margin-bottom: 12px; }
 
 .tags .examples h3 { margin-bottom: 10px; }
@@ -169,7 +172,7 @@ p.children strong.modules { padding-left: 5px; }
 ul.fullTree { display: none; padding-left: 0; list-style: none; margin-left: 0; margin-bottom: 10px; }
 ul.fullTree ul { margin-left: 0; padding-left: 0; list-style: none; }
 ul.fullTree li { text-align: center; }
-ul.fullTree li.next:before { font-size: 1.2em; content: '⬆'; color: #bbb; display: block; margin-top: 3px; }
+ul.fullTree li.next:before { font-size: 1.2em; content: '\2B06'; color: #bbb; display: block; margin-top: 3px; }
 
 #search { position: absolute; right: 14px; top: 0px; }
 #search a:link, #search a:visited { 
@@ -186,6 +189,7 @@ ul.fullTree li.next:before { font-size: 1.2em; content: '⬆'; color: #bbb; disp
   -webkit-border-top-left-radius: 5px; -webkit-border-top-right-radius: 5px;
 }
 #search a.inactive { color: #999; }
+.frames #search { display: none; }
 .inheritanceTree, .toggleDefines { float: right; }
 
 #menu { font-size: 1.3em; color: #bbb; top: -5px; position: relative; }
@@ -193,6 +197,8 @@ ul.fullTree li.next:before { font-size: 1.2em; content: '⬆'; color: #bbb; disp
 #menu .title { color: #555; }
 #menu a:link, #menu a:visited { color: #333; text-decoration: none; border-bottom: 1px dotted #bbd; }
 #menu a:hover { color: #05a; }
+#menu .noframes { display: none; }
+.frames #menu .noframes { display: inline; float: right; }
 
 #footer { margin-top: 15px; border-top: 1px solid #ccc; text-align: center; padding: 7px 0; color: #999; }
 #footer a:link, #footer a:visited { color: #444; text-decoration: none; border-bottom: 1px dotted #bbd; }
@@ -201,7 +207,7 @@ ul.fullTree li.next:before { font-size: 1.2em; content: '⬆'; color: #bbb; disp
 #listing ul.alpha { font-size: 1.1em; }
 #listing ul.alpha { margin: 0; padding: 0; padding-bottom: 10px; list-style: none; }
 #listing ul.alpha li.letter { font-size: 1.4em; padding-bottom: 10px; }
-#listing ul.alpha ul { margin: 0; padding: 0; }
+#listing ul.alpha ul { margin: 0; padding-left: 15px; }
 #listing ul small { color: #666; font-size: 0.7em; }
 
 li.r1 { background: #f0f0f0; }
@@ -258,4 +264,5 @@ pre.code .gvar,
 pre.code .id.backref, 
 pre.code .id.nth_ref { color: #6D79DE; }
 pre.code .regexp, .dregexp { color: #036A07; }
+pre.code a { border-bottom: 1px dotted #bbf; }
 
