http_proxy and ftp_proxy support
Signed-off-by: Greg Fitzgerald <netzdamon@gmail.com>

--- a/lib/athenry/templates/bashconfig.erb
+++ b/lib/athenry/templates/bashconfig.erb
@@ -17,3 +17,7 @@ PROFILE="<%= RConfig.athenry.gentoo.profile %>"
 # These change depending on what your building do not edit!
 FRESHEN="<%= $freshen %>"
 NOPALUDIS="<%= $nopaludis %>"
+
+#Proxy Settings
+HTTP_PROXY="<% RConfig.athenry.proxy.http_proxy %>"
+FTP_PROXY="<% RConfig.athenry.proxy.ftp_proxy %>"
