Use the constants for http_proxy and ftp_proxy
Signed-off-by: Greg Fitzgerald <netzdamon@gmail.com>

--- a/lib/athenry/templates/bashconfig.erb
+++ b/lib/athenry/templates/bashconfig.erb
@@ -19,5 +19,5 @@ FRESHEN="<%= $freshen %>"
 NOPALUDIS="<%= $nopaludis %>"
 
 #Proxy Settings
-HTTP_PROXY="<% RConfig.athenry.proxy.http_proxy %>"
-FTP_PROXY="<% RConfig.athenry.proxy.ftp_proxy %>"
+HTTP_PROXY="<% HTTP_PROXY %>"
+FTP_PROXY="<% FTP_PROXY %>"
